kubernetes/main/apps/adguardhome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome
  labels:
    alerts.nidr0x.win/enabled: "true"
spec:
  selector:
    matchLabels:
      app: adguardhome
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: adguardhome
        alerts.nidr0x.win/enabled: "true"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      volumes:
        - name: config
          configMap:
            name: adguard-config
        - name: users
          secret:
            secretName: users
        - name: config-folder
          emptyDir: {}
        - name: work-folder
          emptyDir: {}
      priorityClassName: system-cluster-critical
      containers:
        - name: adguardhome
          image: adguard/adguardhome:v1.0.0-b.1
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 25m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
          livenessProbe:
            tcpSocket:
              port: dns-tcp
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: dns-tcp
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: admin
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: config-folder
              mountPath: /opt/adguardhome/conf
            - name: work-folder
              mountPath: /opt/adguardhome/work
