kubernetes/main/apps/adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguardhome
    homelab.nidr0x.dev/l2-announce: "true"
  name: adguardhome-http
  annotations:
    "io.cilium/lb-ipam-sharing-key": "dns"
    "io.cilium/lb-ipam-ips": "192.168.1.241"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguardhome
    homelab.nidr0x.dev/l2-announce: "true"
  name: adguardhome-admin
  annotations:
    "io.cilium/lb-ipam-sharing-key": "dns"
    "io.cilium/lb-ipam-ips": "192.168.1.241"
spec:
  type: LoadBalancer
  ports:
    - name: admin
      port: 3000
      protocol: TCP
      targetPort: admin
  selector:
    app: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguardhome
    homelab.nidr0x.dev/l2-announce: "true"
  name: dns-over-tls
  annotations:
    "io.cilium/lb-ipam-sharing-key": "dns"
    "io.cilium/lb-ipam-ips": "192.168.1.241"
spec:
  type: LoadBalancer
  ports:
    - name: dns-over-tls
      port: 853
      protocol: TCP
      targetPort: dns-over-tls
    - name: dns-over-quic
      port: 853
      protocol: UDP
      targetPort: dns-over-quic-2
  selector:
    app: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguardhome
    homelab.nidr0x.dev/l2-announce: "true"
  name: dns-tcp-udp
  annotations:
    "io.cilium/lb-ipam-sharing-key": "dns"
    "io.cilium/lb-ipam-ips": "192.168.1.241"
spec:
  type: LoadBalancer
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  selector:
    app: adguardhome
