kubernetes/main/apps/adguardhome/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector:
    matchLabels:
      app: adguardhome
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-cilium-gateway
spec:
  podSelector:
    matchLabels:
      app: adguardhome
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-ingress
spec:
  podSelector:
    matchLabels:
      app: adguardhome
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 853
        - protocol: UDP
          port: 853
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-upstream-dns-egress
spec:
  podSelector:
    matchLabels:
      app: adguardhome
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 443
